# mlx-lm-lens

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  README.md  pyproject.toml
src/mlx_lm_lens/: __init__.py  config.py  exceptions.py
src/mlx_lm_lens/ablations/: __init__.py  base.py  knockout.py  mean.py  noise.py  registry.py  zero.py
src/mlx_lm_lens/analysis/: __init__.py  anomaly.py
src/mlx_lm_lens/circuit/: __init__.py  ablation.py  ablation_sweep.py  angles.py  decompose.py  patch.py  tracer.py
src/mlx_lm_lens/cli/: activations.py  circuit.py  circuit_ablate.py  circuit_angles.py  circuit_decompose.py  circuit_patch.py  compare.py  comparison_formatter.py  comparison_tui.py  generate.py  generate_tui.py  logit_lens.py  logit_lens_formatter.py  main.py  wordcloud_renderer.py
src/mlx_lm_lens/core/: __init__.py  activation_capture.py  comparison_engine.py  drift_correction.py  logit_generation.py  logit_projection.py  logit_sampling.py  model_loader.py  tokenizer_utils.py
src/mlx_lm_lens/formatters/: __init__.py  base.py  csv.py  json.py  registry.py  table.py
src/mlx_lm_lens/metrics/: __init__.py  base.py  cka.py  cosine.py  effective_dim.py  energy_kl.py  grassmannian.py  mad.py  procrustes.py  registry.py  rsa.py
src/mlx_lm_lens/runner/: __init__.py  activation_runner.py  shaman_runner.py
src/mlx_lm_lens/shaman/: __init__.py  deep_validators.py  early_validators.py  hypotheses.py  mid_a_validators.py  mid_b_validators.py  report.py  validators.py
src/mlx_lm_lens/utils/: __init__.py  model_utils.py
