[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-lm-lens"
version = "0.1.0"
description = "Mechanistic interpretability CLI for MLX language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Adeel Ahmad", email = "adeelahmad99@gmail.com"}
]

dependencies = [
    "mlx>=0.20",
    "mlx-lm>=0.15",
    "typer>=0.12",
    "rich>=13.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
viz = [
    "wordcloud>=1.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
]

[project.scripts]
mlx-lm-lens = "mlx_lm_lens.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mlx_lm_lens --cov-report=term-missing --cov-fail-under=90"
python_files = ["test_*.py", "*_test.py"]
